--- a/webadmin/app/index.html
+++ b/webadmin/app/index.html
@@ -18,6 +18,13 @@
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <style type="text/css">
+      body {
+      padding-top: 20px;
+      padding-bottom: 20px;
+      }
+    </style>
   </head>
   <body ng-app="webadminApp">
     <!--[if lt IE 7]>
